main.css
:root {
    --main-color: #392d59;
    --text-color: white;
    --accenting: #b9bdd1;
}

html {
    overflow-y: scroll;
    height: 100%;
    padding: 0;
}

body {
    background-color:var(--accenting);
    height: 100%;
    width: 100%;
    padding: 0;
    margin: 0;
    z-index: -1;
}

#nav {
    max-width: 100vw;
    height: 60px;
    position: relative;
    background-color: var(--main-color);
    display: flex;
}

#Title {
    color: var(--text-color);
    top: 5px;
    font-size: 25px;
    position: relative;
    display: block;
    align-self: center;
    margin-left: 20px;
    z-index: 7;
}

#icon-div {
    display: none;
}

.read-book-icon {
    height: 35px;
    width: auto;
    position: relative;
    left: 10px;
    align-self: center;
    z-index: 5;
    filter: invert();
}

#cover-div-book-search {
    position: absolute;
    margin-left: 274px;
    background-color: var(--main-color);
    width: 250px;
    border-radius: 10px;
    top: 20px;
    height: 20px;
    z-index: 3;
}

#cover-div-book-search2 {
    position: absolute;
    margin-left: 274px;
    background-color: var(--main-color);
    width: 250px;
    display: none;
    border-radius: 10px;
    top: 20px;
    height: 20px;
    z-index: 3;
}

#search-icon {
    position: relative;
    display: block;
    height: 30px;
    width: auto;
    filter: invert();
    z-index: 4;
    left: 35px;
    align-self: center;
}

.animatedCover {
    animation: searchCoverSlide ease-in .7s forwards;
}

.animatedCoverUp {
    animation: searchCoverUp ease-in .7s forwards;
}


@keyframes searchCoverSlide {
    100% {
        transform:translateX(-98%);
    }
}

@keyframes searchCoverUp {
    0% {
        transform:translateX(-98%);
    }
}

#book-search-input {
    position: absolute;
    display: block;
    height: 20px;
    width: auto;
    z-index: 2;
    top: 20px;
    left: 280px;
    border-radius: 10px;
}

#book-search-input2 {
    display: none;
}

.end-nav-bar-items {
    margin-left: auto;
    margin-right: -100px;
    width: 292px;
    display: flex;
    position: relative;
}

#plus-icon {
    height: 20px;
    width: auto;
    position: relative;
    display: block;
    align-self: center;
    cursor: pointer;
    filter: invert();
}


#tagEditorIcon {
    height: 40px;
    width: auto;
    position: relative;
    display: block;
    left: 25px;
    align-self: center;
    cursor: pointer;
}

#tags-dropdown {
    display: none;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
    background-color: #362544;
    height: 232px;
    width: 118px;
    position: fixed;
    right: 15px;
    top: 9.6%;
    border-radius: 12px;
    z-index: 50;
    -webkit-border-radius: 12px;
    -moz-border-radius: 12px;
    -ms-border-radius: 12px;
    -o-border-radius: 12px;
}

.tag-titles {
    color: white;
    cursor: pointer;
    margin: 0;
    width: 100%;
    height: 16.6%;
    line-height: 35px;
    border-radius: 10px;
    text-align: center;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
}

.tag-titles:hover {
    background-color: rgb(128, 63, 95);
}

#new-book-title {
    font-size: 20px;
    position: relative;
    display: block;
    align-self: center;
    top: 3px;
    left: 4px;
    cursor: pointer;
    filter: invert();
}

#account-title {
    font-size: 20px;
    position: relative;
    display: block;
    align-self: center;
    top: 3px;
    left: 25px;
    cursor: pointer;
    filter: invert();
}

#options {
    height: 20px;
    width: auto;
    left: 45px;
    position: relative;
    align-self: center;
    z-index: 6;
    filter: invert();
}

#empty-quote {
    position: absolute;
    left: 0;
    right: 0;
    top: 50%;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    color: #0b205147;
    display: none;
}

#book-container {
    display: grid;
    position: relative;
    margin: auto;
    margin-top: 15px;
    margin-bottom: 50px;
    padding-bottom: 10px;
    justify-content: center;
    overflow-x: hidden;
    overflow-y: hidden;
    min-height: 290px;
    width: 95%;
    grid-template-columns: repeat(auto-fill, 175px);
    grid-template-rows: repeat(auto-fill, 280px);
    grid-auto-flow: row;
    gap: 20px 10px;
    padding-right: 50px;
    left: 32px;
    height: max-content;
}

.book-hover-all {
    position: absolute;
    opacity: 0;
    z-index: 71;
    transition: opacity .5s;
    -webkit-transition: opacity .5s;
    -moz-transition: opacity .5s;
    -ms-transition: opacity .5s;
    -o-transition: opacity .5s;
}

.hover:hover {
    opacity: 1;
}

#star {
    z-index: 72;
    position: absolute;
    top: 10px;
    left: 10px;
    width: 30px;
    height: 30px;
    cursor: pointer;
}

.tag {
    z-index: 72;
    position: absolute;
    top: 10px;
    left: 115px;
    width: 30px;
    height: 30px;
    cursor: pointer;
}

.bookTags {
    height: 157px;
    width: 75px;
    background-color: rgb(194, 147, 221);
    position: absolute;
    z-index: 70;
    top: 40px;
    left: 120px;
    right: -199px;
    border-radius: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
    align-content: space-evenly;
    display: flex;
    flex-direction: column;
    padding: 2.5px;
}



.bookTagStyle {
    align-self: stretch;
    cursor: pointer;
    font-size: 15px;
    color: rgb(80, 22, 92);
    font-weight: bold;
    text-align: center;
    border-radius: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
    padding: 2.5px;
    position: relative;
    right: .5px;
    margin: 0;
}

.bookTagStyle:hover {
    background-color: rgb(226, 194, 225);
    border-radius: 10px;
    -webkit-border-radius: 10px;
    -moz-border-radius: 10px;
    -ms-border-radius: 10px;
    -o-border-radius: 10px;
}
/* ... */

